fix z-index on body for safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,7 @@ body {
     rgb(var(--background-start-rgb)) 100vh,
     rgb(var(--background-end-rgb))
   );
+  z-index: 0;
 }
 
 a {
